Созданы первые сущности Реализована логика авторизации и аутентификации

--- a/Library.Backend/src/Web/Library.WebAPI/appsettings.json
+++ b/Library.Backend/src/Web/Library.WebAPI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DbConnectionString": "User ID=postgres;Password=root;Host=localhost;Port=5432;Database=LibraryDb2;Pooling=true;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
