Backend-логика, связанная с книгами

--- a/Library.Backend/src/Web/Library.WebAPI/appsettings.json
+++ b/Library.Backend/src/Web/Library.WebAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DbConnectionString": "User ID=postgres;Password=root;Host=localhost;Port=5432;Database=LibraryDb2;Pooling=true;"
+    "DbConnectionString": "User ID=postgres;Password=root;Host=localhost;Port=5432;Database=LibraryDb4;Pooling=true;"
   },
   "Logging": {
     "LogLevel": {
@@ -8,5 +8,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Application": {
+    "BookingTimeInHours": 3
+  }
 }
